5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4374/executions/1633_2922.log
== TEST (2019-04-02 19:17:00) 
-- CODE:
0.125 * 8
-- OUTPUT:
NAO SEI OQ EU TO FAZENDO AQUI
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:17:19) 
-- CODE:
print(0.125 * 8)
-- OUTPUT:
1.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:30:17) 
-- CODE:
meses=float(input("quantidade de meses"))
-- OUTPUT:
1.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:36:57) 
-- CODE:
meses=float(input("quantidade de meses"))
taxa= 1042000**(1/meses)

print(taxa)
-- OUTPUT:
1.1664475006216133
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:38:08) 
-- CODE:
meses=float(input("quantidade de meses"))
taxa= 1042000**(1/meses)

print(roud(taxa)
-- ERROR:
File "XXXX", line 5
    
                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:38:43) 
-- CODE:
meses=float(input("quantidade de meses"))
taxa= 1042000**(1/meses)

print(round(taxa))
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:40:01) 
-- CODE:
meses=float(input("quantidade de meses"))
taxa= 1042000**(1/meses)

print(round(taxa, 5))
-- OUTPUT:
1.16645
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:40:25) 
-- CODE:
meses=float(input("quantidade de meses"))
taxa= 104200.0**(1/meses)

print(round(taxa, 5))
-- OUTPUT:
1.13698
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:40:57) 
-- CODE:
meses=float(input("quantidade de meses"))
taxa= 0.1042000**(1/meses)

print(round(taxa, 5))
-- OUTPUT:
0.97519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:41:21) 
-- CODE:
meses=float(input("quantidade de meses"))
taxa= 010.42000**(1/meses)

print(round(taxa, 5))
-- OUTPUT:
1.02638
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:41:36) 
-- CODE:
meses=float(input("quantidade de meses"))
taxa= 00.1042000**(1/meses)

print(round(taxa, 5))
-- OUTPUT:
0.97519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:42:04) 
-- CODE:
meses=float(input("quantidade de meses"))
taxa= 00.0042000**(1/meses)

print(round(taxa, 5))
-- OUTPUT:
0.941
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:42:21) 
-- CODE:
meses=float(input("quantidade de meses"))
taxa= 0000.0042000**(1/meses)

print(round(taxa, 5))
-- OUTPUT:
0.941
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:42:33) 
-- CODE:
meses=float(input("quantidade de meses"))
taxa= 0000.000042000**(1/meses)

print(round(taxa, 5))
-- OUTPUT:
0.89407
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:42:45) 
-- CODE:
meses=float(input("quantidade de meses"))
taxa= 0000.0000000042000**(1/meses)

print(round(taxa, 5))
-- OUTPUT:
0.8071
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:43:58) 
-- CODE:
meses=float(input("quantidade de meses"))
taxa= 1042000**(1500/meses)

print(round(taxa, 5))
-- OUTPUT:
1.9851590870148325e+100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:44:57) 
-- CODE:
meses=float(input("quantidade de meses"))
taxa= 1042000,000**(1500/meses)

print(round(taxa, 5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(taxa, 5))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:45:23) 
-- CODE:
meses=float(input("quantidade de meses"))
taxa= 1042000,0**(1500/meses)

print(round(taxa, 9))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(taxa, 9))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:45:38) 
-- CODE:
meses=float(input("quantidade de meses"))
taxa= 1042000,0**(1500/meses)

print(round(taxa, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(taxa, 2))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:45:54) 
-- CODE:
meses=float(input("quantidade de meses"))
taxa= 1042000,0**(1500/meses)

print(round(taxa, 5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(taxa, 5))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:46:19) 
-- CODE:
meses=float(input("quantidade de meses"))
taxa= 1042000,0**(1500/meses)

print(round(taxa, 5)
-- ERROR:
File "XXXX", line 5
    
                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:46:28) 
-- CODE:
meses=float(input("quantidade de meses"))
taxa= 1042000,0**(1500/meses)

print(round(taxa, 5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(taxa, 5))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:46:51) 
-- CODE:
meses=float(input("quantidade de meses"))
taxa= 1042000,0**(1500/meses)

print(round(taxa, 5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(taxa, 5))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:47:02) 
-- CODE:
meses=float(input("quantidade de meses"))
taxa= 1042000**(1500/meses)

print(round(taxa, 5))
-- OUTPUT:
1.9851590870148325e+100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:47:18) 
-- CODE:
meses=float(input("quantidade de meses"))
taxa= 1042000**(1500/meses)

print(round(taxa, 2))
-- OUTPUT:
1.9851590870148325e+100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:47:33) 
-- CODE:
meses=float(input("quantidade de meses"))
taxa= 1042000**(1500/meses)

print(round(taxa))
-- OUTPUT:
19851590870148324512840604080216826112273258453269733645353523071131785219289180194702233892315725824
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:47:52) 
-- CODE:
meses=float(input("quantidade de meses"))
taxa= 1042000**(1500/meses)

print(round(taxa, 5))
-- OUTPUT:
1.9851590870148325e+100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:48:32) 
-- CODE:
meses=float(input("quantidade de meses"))
taxa= 1042000**(1500/meses) - 1

print(round(taxa, 5))
-- OUTPUT:
1.9851590870148325e+100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:48:52) 
-- CODE:
meses=float(input("quantidade de meses"))
taxa=  '1042000**(1500/meses)" - 1

print(round(taxa, 5))
-- ERROR:
File "XXXX", line 2
    taxa=  '1042000**(1500/meses)" - 1
                                     ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:49:00) 
-- CODE:
meses=float(input("quantidade de meses"))
taxa=  "1042000**(1500/meses)" - 1

print(round(taxa, 5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    taxa=  "1042000**(1500/meses)" - 1
TypeError: unsupported operand type(s) for -: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:49:14) 
-- CODE:
meses=float(input("quantidade de meses"))
taxa=  "1042000**(1500/meses) - 1"

print(round(taxa, 5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(taxa, 5))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:49:32) 
-- CODE:
meses=float(input("quantidade de meses"))
taxa= "1042000**(1500/meses) - 1"

print(round(taxa, 5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(taxa, 5))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:49:44) 
-- CODE:
meses=float(input("quantidade de meses"))
taxa= 1042000**(1500/meses) - 1

print(round(taxa, 5))
-- OUTPUT:
1.9851590870148325e+100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
